--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@bamboorose/br-components-2.0": "^1.0.81",
     "@mantine/core": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
