--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@bamboorose/br-components-2.0": "^1.0.81",
     "@mantine/core": "^7.8.1",
+    "@mantine/dates": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,10 +14,12 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-debounce": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
